added rest getUsetChats endpoint
